--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   routemaster: ^1.0.1
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  go_router: ^14.1.3
 
 dev_dependencies:
   flutter_test:
